--- a/app/src/main/res/layout/row_stat.xml
+++ b/app/src/main/res/layout/row_stat.xml
@@ -121,7 +121,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Totay Recovered"
+                    android:text="Today Recovered"
                     android:textColor="@color/colorGreen"
                     android:textStyle="bold"/>
                 <TextView
