--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,6 +23,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="65dp"
+        android:layout_weight="1"
         android:layout_marginBottom="8dp"
         android:background="@drawable/shape_rect"
         android:layout_gravity="center"
@@ -57,6 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginBottom="8dp"
+        android:layout_weight="1"
         android:background="@drawable/shape_rect"
         android:layout_gravity="center"
         android:orientation="horizontal"
@@ -88,6 +90,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="65dp"
+        android:layout_weight="1"
         android:layout_marginBottom="8dp"
         android:background="@drawable/shape_rect"
         android:layout_gravity="center"
@@ -120,6 +123,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="65dp"
+        android:layout_weight="1"
         android:layout_marginBottom="8dp"
         android:background="@drawable/shape_rect"
         android:layout_gravity="center"
@@ -151,6 +155,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_weight="1"
         android:layout_height="65dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/shape_rect"
@@ -186,6 +191,7 @@
         android:layout_height="65dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/shape_rect"
+        android:layout_weight="1"
         android:layout_gravity="center"
         android:orientation="horizontal"
         android:padding="8dp">
