--- a/app/src/main/res/layout/row_stat.xml
+++ b/app/src/main/res/layout/row_stat.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -125,7 +126,7 @@
                     android:textColor="@color/colorGreen"
                     android:textStyle="bold"/>
                 <TextView
-                    android:id="@+id/todayRecoveredTv"
+                    android:id="@+id/todayRecoversTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -134,8 +135,10 @@
                     android:textColor="@color/colorBlack"/>
             </TableRow>
 
+
         </TableLayout>
 
-            </RelativeLayout>
+
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
