--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -8,4 +8,8 @@
         android:title="Stats"
         android:icon="@drawable/ic_stats_black"
         />
+    <item android:id="@+id/map-view"
+        android:title="Map"
+        android:icon="@drawable/ic_baseline_public"
+        />
 </menu>
