--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="65dp"
-        android:layout_weight="1"
+
         android:layout_marginBottom="8dp"
         android:background="@drawable/shape_rect"
         android:layout_gravity="center"
@@ -58,7 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginBottom="8dp"
-        android:layout_weight="1"
+
         android:background="@drawable/shape_rect"
         android:layout_gravity="center"
         android:orientation="horizontal"
@@ -90,7 +90,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="65dp"
-        android:layout_weight="1"
+
         android:layout_marginBottom="8dp"
         android:background="@drawable/shape_rect"
         android:layout_gravity="center"
@@ -123,7 +123,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="65dp"
-        android:layout_weight="1"
+
         android:layout_marginBottom="8dp"
         android:background="@drawable/shape_rect"
         android:layout_gravity="center"
@@ -155,7 +155,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_weight="1"
+        android:layout_weight="0"
         android:layout_height="65dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/shape_rect"
@@ -191,7 +191,8 @@
         android:layout_height="65dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/shape_rect"
-        android:layout_weight="1"
+        android:layout_weight="0
+"
         android:layout_gravity="center"
         android:orientation="horizontal"
         android:padding="8dp">
@@ -218,6 +219,18 @@
             android:textSize="16sp"
             android:textColor="@color/colorBlack"
             android:textAlignment="textEnd"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1"
+
+        android:layout_gravity="center"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+
     </LinearLayout>
 
 </LinearLayout>
